# bw-mcp

./: .coverage  .dockerignore  .env  .env.example  .gitignore  AGENT.md  CHANGELOG.md  Dockerfile  IDEAS.md  LICENSE  MEMORY.md  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  gemini-extension.json  install.sh  pyproject.toml  uninstall.sh
.agents/skills/bw-proxy/: SKILL.md
.agents/skills/bw-proxy/references/: install.md
.github/workflows/: publish.yml
docs/: 01_simulation_core_protocol.md  02_simulation_vault_organization.md  03_simulation_pii_redaction.md  04_simulation_extreme_edge.md  05_simulation_destructive_firewall.md  07_simulation_advanced_search.md  08_simulation_acid_wal_resilience.md  APPLIANCE_HARDENING.md  AUDIT.md  LIMITATIONS.md  OPERATIONS.md  OPERATOR_GUIDE.md  bitwarden_architecture.md  simulation_advanced_types.md  simulation_destruction.md  simulation_exhaustive.md  simulation_extreme_edge.md  simulation_organization.md
docs/archive/: 04_simulation_extreme_edge.md  06_simulation_safe_creation.md  07_simulation_advanced_search.md  08_simulation_acid_wal_resilience.md
scratch/: main_suffix.py  main_suffix_v2.py  real_use_test.sh
scripts/: bw_proxy_shim.py  perf_audit.py  sync_docs.py  validate_project.py
src/bw_blind_proxy/: cli.py  config.py  config.yaml  logger.py  models.py  server.py  subprocess_wrapper.py  transaction.py  ui.py  wal.py
src/bw_mcp/: cli.py  config.py  config.yaml  daemon.py  logger.py  main.py  models.py  scrubber.py  server.py  subprocess_wrapper.py  transaction.py  ui.py  wal.py
src/bw_proxy/: cli_bridge.py  cli_support.py  config.py  config.yaml  daemon.py  logger.py  logic.py  main.py  models.py  server.py  session.py  subprocess_wrapper.py  transaction.py  ui.py  unlock_lease.py  vault_runtime.py  wal.py  web_ui.py
tests/: test_acid_wal.py  test_audit_updates.py  test_audit_v2.py  test_cli_audit.py  test_config_runtime.py  test_daemon.py  test_docker_shim.py  test_logic.py  test_refactor.py  test_sanitization.py  test_scrubber.py  test_server_filters.py  test_server_introspection.py  test_transaction_execution.py  test_transactions.py  test_ui.py  test_web_ui.py
